Update scheduled visit persister part

--- a/egov-persister/amc-persister.yml
+++ b/egov-persister/amc-persister.yml
@@ -234,7 +234,7 @@ serviceMaps:
       transactionCodeJsonPath: $.id
       auditAttributeBasePath: $.*
       queryMaps:
-        - query: INSERT INTO scheduled_visits (id, tenant_id, amc_configuration_id, facility_id, visit_number, scheduled_date, actual_visit_date, status, visit_report, additional_details, created_by, created_time, last_modified_by, last_modified_time) VALUES(?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?);
+        - query: INSERT INTO scheduled_visits (id, tenant_id, amc_configuration_id, facility_id, project_id, visit_number, scheduled_date, actual_visit_date, last_scheduled_visit_date, status, visit_report, additional_details, created_by, created_time, last_modified_by, last_modified_time) VALUES(?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?);
           basePath: $.ScheduledVisit.*
           jsonMaps:
             - jsonPath: $.ScheduledVisit.*.id
@@ -245,11 +245,15 @@ serviceMaps:
 
             - jsonPath: $.ScheduledVisit.*.facilityId
 
+            - jsonPath: $.ScheduledVisit.*.projectId
+
             - jsonPath: $.ScheduledVisit.*.visitNumber
 
             - jsonPath: $.ScheduledVisit.*.scheduledDate
 
             - jsonPath: $.ScheduledVisit.*.actualVisitDate
+
+            - jsonPath: $.ScheduledVisit.*.lastVisitDate
 
             - jsonPath: $.ScheduledVisit.*.status
 
@@ -300,7 +304,7 @@ serviceMaps:
       transactionCodeJsonPath: $.id
       auditAttributeBasePath: $.*
       queryMaps:
-        - query: UPDATE public.scheduled_visits SET visit_number=?, scheduled_date=?, actual_visit_date=?, status=?, visit_report=?, additional_details=?, last_modified_by=?, last_modified_time=? WHERE id=?;
+        - query: UPDATE public.scheduled_visits SET visit_number=?, scheduled_date=?, actual_visit_date=?, last_scheduled_visit_date=?, status=?, visit_report=?, additional_details=?, last_modified_by=?, last_modified_time=? WHERE id=?;
           basePath: $.ScheduledVisit.*
           jsonMaps:
             - jsonPath: $.ScheduledVisit.*.visitNumber
@@ -308,6 +312,8 @@ serviceMaps:
             - jsonPath: $.ScheduledVisit.*.scheduledDate
 
             - jsonPath: $.ScheduledVisit.*.actualVisitDate
+
+            - jsonPath: $.ScheduledVisit.*.lastVisitDate
 
             - jsonPath: $.ScheduledVisit.*.status
 
