--- a/egov-indexer/im-services.yml
+++ b/egov-indexer/im-services.yml
@@ -566,6 +566,8 @@ ServiceMaps:
                 outJsonPath: $.Data.isLive
               - inJsonPath: $.name
                 outJsonPath: $.Data.name
+              - inJsonPath: $.phcName
+                outJsonPath: $.Data.phcName
               - inJsonPath: $.phcType
                 outJsonPath: $.Data.phcType
               - inJsonPath: $.tenantId
@@ -586,6 +588,18 @@ ServiceMaps:
                 outJsonPath: $.Data.solar_panel_status
               - inJsonPath: $.state
                 outJsonPath: $.Data.state
+              - inJsonPath: $.synced
+                outJsonPath: $.Data.synced
+              - inJsonPath: $.boundary.blockCode
+                outJsonPath: $.Data.boundary.blockCode
+              - inJsonPath: $.boundary.countryCode
+                outJsonPath: $.Data.boundary.countryCode
+              - inJsonPath: $.boundary.districtCode
+                outJsonPath: $.Data.boundary.districtCode
+              - inJsonPath: $.boundary.facilityCode
+                outJsonPath: $.Data.boundary.facilityCode
+              - inJsonPath: $.boundary.stateCode
+                outJsonPath: $.Data.boundary.stateCode
               - inJsonPath: $.mappedVendorUserName
                 outJsonPath: $.Data.mappedVendorUserName
               - inJsonPath: $.mappedVendorName
