--- a/egov-indexer/im-services.yml
+++ b/egov-indexer/im-services.yml
@@ -544,9 +544,9 @@ ServiceMaps:
     - topic: save-phc-master-list-indexer
       configKey: INDEX
       indexes:
-        - name: health-facility-index
+        - name: health-facility-index-v0001
           type: general
-          id: $.tenantId
+          id: $.facilityId
           jsonPath: $
           timeStampField: $.lastModifiedTime
           fieldsToBeMasked: []
@@ -554,6 +554,8 @@ ServiceMaps:
             indexMapping:
               Data: {}
             fieldMapping:
+              - inJsonPath: $.facilityId
+                outJsonPath: $.Data.facilityId
               - inJsonPath: $.block
                 outJsonPath: $.Data.block
               - inJsonPath: $.code
@@ -564,6 +566,8 @@ ServiceMaps:
                 outJsonPath: $.Data.isLive
               - inJsonPath: $.name
                 outJsonPath: $.Data.name
+              - inJsonPath: $.phcName
+                outJsonPath: $.Data.phcName
               - inJsonPath: $.phcType
                 outJsonPath: $.Data.phcType
               - inJsonPath: $.tenantId
@@ -584,6 +588,18 @@ ServiceMaps:
                 outJsonPath: $.Data.solar_panel_status
               - inJsonPath: $.state
                 outJsonPath: $.Data.state
+              - inJsonPath: $.synced
+                outJsonPath: $.Data.synced
+              - inJsonPath: $.boundary.blockCode
+                outJsonPath: $.Data.boundary.blockCode
+              - inJsonPath: $.boundary.countryCode
+                outJsonPath: $.Data.boundary.countryCode
+              - inJsonPath: $.boundary.districtCode
+                outJsonPath: $.Data.boundary.districtCode
+              - inJsonPath: $.boundary.facilityCode
+                outJsonPath: $.Data.boundary.facilityCode
+              - inJsonPath: $.boundary.stateCode
+                outJsonPath: $.Data.boundary.stateCode
               - inJsonPath: $.mappedVendorUserName
                 outJsonPath: $.Data.mappedVendorUserName
               - inJsonPath: $.mappedVendorName
