Update facility persister

--- a/health/egov-persister/facility-persister.yml
+++ b/health/egov-persister/facility-persister.yml
@@ -38,9 +38,10 @@ serviceMaps:
       queryMaps:
         - query: >
             INSERT INTO facility (id, tenant_id, facility_name, facility_type, facility_category, facility_subtype, facility_ownership, facility_region, addressId, facility_details,
-              wf_status, additional_details, is_active, boundary_code, is_onm_ready, facility_poc_name, facility_poc_phone, facility_poc_email, hfr_id, nin_id, user_id, facility_status
+              wf_status, additional_details, is_active, boundary_code, is_onm_ready, facility_poc_name, facility_poc_phone, facility_poc_email, hfr_id, nin_id, user_id, facility_status,
+              created_by, created_at, updated_by, updated_at
             )
-            VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?);
+            VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?);
           basePath: $
           jsonMaps:
             - jsonPath: $.facility_id
@@ -69,6 +70,10 @@ serviceMaps:
             - jsonPath: $.nin_id
             - jsonPath: $.user_id
             - jsonPath: $.facility_status
+            - jsonPath: $.auditDetails.createdBy
+            - jsonPath: $.auditDetails.createdTime
+            - jsonPath: $.auditDetails.lastModifiedBy
+            - jsonPath: $.auditDetails.lastModifiedTime
 
     - version: 1.0
       description: Updates a single Facility object
